добавил <link rel="preload"> в каждые страницы

--- a/source/form.html
+++ b/source/form.html
@@ -6,12 +6,20 @@
     <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml" />
+
     <link
       rel="apple-touch-icon"
       href="img/favicons/favicon-apple-180.png"
       type="image/png"
     />
     <link rel="manifest" href="manifest.webmanifest" />
+    <link
+      rel="preload"
+      href="./fonts/oswald/oswaldregular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <title>Подбор программы</title>
   </head>
 
