--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,13 @@
       type="image/png"
     />
     <link rel="manifest" href="manifest.webmanifest" />
+    <link
+      rel="preload"
+      href="./fonts/oswald/oswaldregular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <title>Главная</title>
   </head>
   <body class="page-body page-body--index">
