Добавил в футере ссылку на на лендинг html-academy, Добавил ссылку изображению, заголовку и тексту в карточку

--- a/source/form.html
+++ b/source/form.html
@@ -383,7 +383,7 @@
         </ul>
 
         <a
-          href="https://up.htmlacademy.ru/"
+          href="https://htmlacademy.ru/intensive/adaptive"
           class="main-footer__html-academy-logo"
           aria-label="Страница Html academy"
         >
