Добавил отступ отрицательный, локация стала выше

--- a/source/index.html
+++ b/source/index.html
@@ -161,7 +161,8 @@
               Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
               на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
               При этом он не менял своих привычек и по-прежнему спит по 16 часов
-              <br />в день.
+              <br />
+              в день.
             </p>
             <div class="living-example__description-container">
               <dl class="living-example__list">
