Добавил икону в gift

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -722,7 +722,15 @@
             </li>
           </ul>
           <div class="additional-products__gift gift">
-            <svg class="gift__icon" width="78" height="81">
+            <svg
+              class="gift__icon"
+              id="gift-icon"
+              width="78"
+              height="81"
+              viewBox="0 0 78 81"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <use xlink:href="img/sprite.svg#gift-icon"></use>
             </svg>
             <p class="gift__text">
