Добавил класс в main-nav класс main-nav--nojs

--- a/source/form.html
+++ b/source/form.html
@@ -48,7 +48,7 @@
             />
           </picture>
         </a>
-        <nav class="main-header__nav main-nav main-nav--closed">
+        <nav class="main-header__nav main-nav main-nav--nojs main-nav--closed">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
@@ -201,7 +201,7 @@
               <label for="phone" class="text-input__label">Телефон:*</label>
               <input
                 class="text-input__input"
-                type="text"
+                type="tel"
                 id="phone"
                 placeholder="8 (960) 900-60-90"
                 value="8 (960) 900-60-90"
