--- a/source/index.html
+++ b/source/index.html
@@ -47,7 +47,7 @@
             />
           </picture>
         </a>
-        <nav class="main-header__nav main-nav main-nav--closed">
+        <nav class="main-header__nav main-nav main-nav--nojs main-nav--closed">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
