Добавил размеры в cat-before для планшета

--- a/source/index.html
+++ b/source/index.html
@@ -209,6 +209,8 @@
                         ./img/cat-before-tablet.png    1x,
                         ./img/cat-before-tablet@2x.png 2x
                       "
+                      width="560"
+                      height="512"
                     />
                     <img
                       class="cat-result__image"
