Добавил rel="preload" три типа шрифта в каждую страницу

--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,21 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <link
       rel="preload"
+      href="./fonts/oswald/oswaldmedium.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
       href="./fonts/oswald/oswaldregular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="./fonts/lato/Lato-Regular.woff2"
       as="font"
       type="font/woff2"
       crossorigin="anonymous"
@@ -74,8 +88,7 @@
     <main class="main-container form-page">
       <h1 class="form-page__title title">Подбор программы</h1>
       <p class="form-page__description description">
-        Заполните анкету, и мы подберем<br />
-        программу питания для вашего кота
+        Заполните анкету, и мы подберем программу питания для вашего кота
       </p>
 
       <form class="form" action="#">
