--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,21 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <link
       rel="preload"
+      href="./fonts/oswald/oswaldmedium.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
       href="./fonts/oswald/oswaldregular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="./fonts/lato/Lato-Regular.woff2"
       as="font"
       type="font/woff2"
       crossorigin="anonymous"
