Запретил перенос в text-input__label

--- a/source/form.html
+++ b/source/form.html
@@ -109,7 +109,9 @@
                 />
               </li>
               <li class="info__item text-input">
-                <label for="weight" class="text-input__label">Вес (кг):*</label>
+                <label for="weight" class="text-input__label"
+                  >Вес&nbsp;(кг):*</label
+                >
                 <input
                   class="text-input__input"
                   type="text"
@@ -122,7 +124,7 @@
               </li>
               <li class="info__item text-input">
                 <label for="age" class="text-input__label"
-                  >Возраст (лет):</label
+                  >Возраст&nbsp;(лет):</label
                 >
                 <input
                   class="text-input__input"
@@ -190,7 +192,9 @@
           </h2>
           <ul class="contact-details__list">
             <li class="contact-details__item text-input text-input--email">
-              <label for="email" class="text-input__label">E-mail:*</label>
+              <label for="email" class="text-input__label"
+                >E&hyphen;mail:&ast;</label
+              >
               <input
                 class="text-input__input"
                 type="email"
